--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -1,68 +1,80 @@
 <!DOCTYPE html>
-<div lang="en">
+<html lang="en">
+​
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
-        <title>My Portfolio</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="../mainpart/style.css">
+</head>
+​
 
-    <div>
-        <header>
-            <nav>
-                <div class="header">
-                    <h1>My Portfolio</h1>
-                </div>
-                <ul>
-                    <li>
-                        <a href="#image1">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#image2">My Work</a>
-                    </li>
-                    <li>
-                        <a href="#image3">Contact Me</a>
-                    </li>
-                    <li>
-                        <a href="#">Resume</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+<body>
+    <header>
+        <nav>
+            <div class="header">
+                <h1>My Portfolio</h1>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="#aboutme">About Me</a>
+                        </li>
+                        <li>
+                            <a href="#mywork">My Work</a>
+                        </li>
+                        <li>
+                            <a href="#contactme">Contact Me</a>
+                        </li>
+                        <li>
+                            <a href="#">Resume</a>
+                        </li>
+                    </ul>
+        </nav>
+    </header>
     </div>
-</div>
-
-<picture>
-    <img src="#" class="topbanner" />
-</picture>
-</div>
-
-<section>
-    <h3 class="leftside">ABOUT ME</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa cumque, saepe ratione dolores dicta deserunt!
-        Similique nulla sed facere debitis esse repellendus, dolor repudiandae adipisci officiis maiores! Omnis, ea
-        ullam?</p>
-</section>
-
-<section>
-    <h3 class="leftside">MY WORK</h3>
-    <img src="#" id="image1" />
-    <img src="#" id="image2" />
-    <img src="#" id="image3" />
-    <img src="#" id="image4" />
-    <img src="#" id="image5" />
-</section>
-
-<section>
-    <h3 class="leftside">CONTACT ME</h3>
-    <p>Phone: 555-555-5555 Email: egarcia2020@yahoo.com LinkedIn: See My Resume</p>
-</section>
-
-<footer>
-    <p><i>Copyright MyPortfolio 2021</i></p>
-</footer>
+    </div>
+    <div class="hero" alt="main hero image" title="main hero image">
+        <h2 class="quote">"Code And Learn"</h2>
+    </div>
+    ​
+    <main>
+        <section class="content">
+            <section id="aboutme" class="aboutme">
+                <h2>About Me</h2>
+            </section>
+            ​
+            <section class="float-right">
+                <p></p>
+            </section>
+            ​
+            <section id="mywork" class="mywork">
+                <h2>My Work</h2>
+            </section>
+            ​
+            <section class="float-right">
+                <p></p>
+            </section>
+            ​
+            <section id="contactme" class="contactme">
+                <h2>Contact Me</h2>
+            </section>
+            ​
+            <section class="float-right">
+                <p></p>
+            </section>
+    </main>
+    ​
+    <footer>
+        <div class="footer">
+            <h4>Made By Ernesto Garcia Code</h4>
+            <p>
+                &copy; 2021 Ernesto Garcia Code Solutions, Inc.
+            </p>
+        </div>
+    </footer>
 </body>
+​
 
 </html>
