--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 ​
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="../mainpart/style.css">
+    <link rel="stylesheet" href="./UCI/myportfolio/mainpart/stylesheet.css">
 </head>
 ​
 
