--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="./UCI/myportfolio/mainpart/stylesheet.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 ​
 
