move css folder

--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
-​
 
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-​
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>​
 
 <body>
     <header>
@@ -35,35 +33,28 @@
     </div>
     <div class="hero" alt="main hero image" title="main hero image">
         <h2 class="quote">"Code And Learn"</h2>
-    </div>
-    ​
+    </div> ​
     <main>
         <section class="content">
             <section id="aboutme" class="aboutme">
                 <h2>About Me</h2>
-            </section>
-            ​
+            </section> ​
             <section class="float-right">
                 <p></p>
-            </section>
-            ​
+            </section> ​
             <section id="mywork" class="mywork">
                 <h2>My Work</h2>
-            </section>
-            ​
+            </section> ​
             <section class="float-right">
                 <p></p>
-            </section>
-            ​
+            </section> ​
             <section id="contactme" class="contactme">
                 <h2>Contact Me</h2>
             </section>
-            ​
             <section class="float-right">
                 <p></p>
             </section>
     </main>
-    ​
     <footer>
         <div class="footer">
             <h4>Made By Ernesto Garcia Code</h4>
@@ -73,6 +64,5 @@
         </div>
     </footer>
 </body>
-​
 
 </html>
