--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-</head>​
+</head>
 
 <body>
     <header>
@@ -33,28 +33,35 @@
     </div>
     <div class="hero" alt="main hero image" title="main hero image">
         <h2 class="quote">"Code And Learn"</h2>
-    </div> ​
+    </div>
+
     <main>
         <section class="content">
             <section id="aboutme" class="aboutme">
                 <h2>About Me</h2>
-            </section> ​
+            </section>
+
             <section class="float-right">
                 <p></p>
-            </section> ​
+            </section>
+
             <section id="mywork" class="mywork">
                 <h2>My Work</h2>
-            </section> ​
+            </section>
+
             <section class="float-right">
                 <p></p>
-            </section> ​
+            </section>
+
             <section id="contactme" class="contactme">
                 <h2>Contact Me</h2>
             </section>
+
             <section class="float-right">
                 <p></p>
             </section>
     </main>
+
     <footer>
         <div class="footer">
             <h4>Made By Ernesto Garcia Code</h4>
