added new html and css

--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet'>
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -31,8 +32,7 @@
     </header>
     </div>
     </div>
-    <div class="hero" alt="main hero image" title="main hero image">
-        <h2 class="quote">"Code And Learn"</h2>
+    <div class="hero" alt="main hero image" title="cool art">
     </div>
 
     <main>
@@ -41,25 +41,61 @@
                 <h2>About Me</h2>
             </section>
 
-            <section class="float-right">
-                <p></p>
+            <section>
+                <p><span class="first">Hello,</span> my name is Ernesto and I am a super fan of technology! Growing up I
+                    use to love taking electronics apart and see what made them tick computers included. My love for
+                    code began when I realize that a set of specific commands entered on a computer program can make
+                    devices like your phone and computer do things like give you directions, stream your favorite tv
+                    show, connect you with your friends and family, and of course buy stuff online. Naturally, I love to
+                    figure out puzzles and put things together and see my work come alive. </p>
             </section>
 
-            <section id="mywork" class="mywork">
-                <h2>My Work</h2>
-            </section>
+            <hr class="mb-4 extraMargin thick mt-0" />
 
-            <section class="float-right">
-                <p></p>
-            </section>
+            <section class="content row justify-center">
+                <section id="mywork" class="mywork">
+                    <h2>My Work</h2>
+                </section>
 
-            <section id="contactme" class="contactme">
-                <h2>Contact Me</h2>
-            </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project One</h3>
+                </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Two</h3>
+                </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Three</h3>   
+                </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Four</h3>
+                </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Five</h3>
+                </section>
+                <section class="square">
+                    <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Six</h3>
+                </section>
 
-            <section class="float-right">
-                <p></p>
-            </section>
+            </div>
+        </div>
+        
+                <hr class="mb-4 extraMargin thick mt-0" />
+
+                <section class="content">
+                    <section id="contactme" class="contactme">
+                        <h2>Contact Me</h2>
+                    </section>
+
+                    <section>
+                        <p>Phone: (562) 360-7602 Email: egarcia2020@yahoo.com</p>
+                    </section>
+
     </main>
 
     <footer>
