updated the css and html

--- a/mainpart/index.html
+++ b/mainpart/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <main>
-        <section class="content">
+        <div class="content">
             <section id="aboutme" class="aboutme">
                 <h2>About Me</h2>
             </section>
@@ -52,49 +52,56 @@
 
             <hr class="mb-4 extraMargin thick mt-0" />
 
-            <section class="content row justify-center">
                 <section id="mywork" class="mywork">
                     <h2>My Work</h2>
                 </section>
-
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project One</h3>
-                </section>
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project Two</h3>
-                </section>
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project Three</h3>   
-                </section>
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project Four</h3>
-                </section>
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project Five</h3>
-                </section>
-                <section class="square">
-                    <div class="project-one" alt="image" title="cool art">
-                    <h3 class="project-name">Project Six</h3>
-                </section>
-
             </div>
+
+           <div class="box">
+            <section class="square">
+                <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project One</h3>
+                </div>
+
+                <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Two</h3>
+                </div>
+
+                <div class="project-one" alt="image" title="cool art">
+                    <h3 class="project-name">Project Three</h3>
+                </div>
+
+            </section>
         </div>
-        
-                <hr class="mb-4 extraMargin thick mt-0" />
+        </div>
 
-                <section class="content">
-                    <section id="contactme" class="contactme">
-                        <h2>Contact Me</h2>
-                    </section>
+        <div class="box">
+        <section class="square">
+            <div class="project-one" alt="image" title="cool art">
+                <h3 class="project-name">Project Four</h3>
+            </div>
 
-                    <section>
-                        <p>Phone: (562) 360-7602 Email: egarcia2020@yahoo.com</p>
-                    </section>
+            <div class="project-one" alt="image" title="cool art">
+                <h3 class="project-name">Project Five</h3>
+            </div>
+
+            <div class="project-one" alt="image" title="cool art">
+                <h3 class="project-name">Project Six</h3>
+            </div>
+
+        </section>
+        </div>
+        </div>
+
+
+        <section class="content">
+            <section id="contactme" class="contactme">
+                <h2>Contact Me</h2>
+            </section>
+
+            <section>
+                <p>Phone: (562) 360-7602 Email: egarcia2020@yahoo.com</p>
+            </section>
 
     </main>
 
