modified the css

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             </section>
 
             <section>
-                <p>Phone: (562) 360-7602 Email: egarcia2020@yahoo.com</p>
+                <p><strong>Phone:</strong> (562) 360-7602</p>
+                <p><strong>Email:</strong> egarcia2020@yahoo.com</p>
             </section>
 
     </main>
