--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
+<!---Main body on the site-->
+
 <body>
     <header>
         <nav>
@@ -35,6 +37,8 @@
     </div>
     <div class="hero" alt="main hero image" title="objects">
     </div>
+
+    <!---Covers the titles and parapraphs inside the body-->
 
     <main>
         <class class="content">
@@ -68,6 +72,8 @@
             </section>
 
             <hr class="mb-4 extraMargin thick mt-0" />
+
+            <!---Middle secition of the site-->
 
             <section class="mylanguages">
                 <h2>Code & Languages</h2>
@@ -114,6 +120,7 @@
 
             <hr class="mb-4 extraMargin thick mt-0" />
 
+         <!---Lower section of the site-->
 
             <section id="mywork" class="mywork">
                 <h2>My Work | GitHub <a href="https://github.com/ernie2021" target="_blank"><img class="github" src="./githublogo.png"></a></h2>
@@ -197,6 +204,7 @@
         </div>
         </div>
 
+           <!---Contact me section and footer below-->
 
         <section class="content">
             <section id="contactme" class="contactme">
