--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="header">
-                <h1>My Portfolio</h1>
+                <h1>My Portfolio | Ernesto Garcia</h1>
                 <div>
                     <ul>
                         <li>
